fix header on small screens

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -7,6 +7,6 @@
 
 .header-contents {
   @include container;
-  padding-top: 0;
-  padding-bottom: 0;
+  padding-top: 0!important;
+  padding-bottom: 0!important;
 }
